[package]
name = "gem_td"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
seldom_map_nav = "0.3"
seldom_interop = "0.3"
bevy-inspector-egui = "0.18"
fastrand = "1.9"
bevy_rapier3d = "0.21"
bevy_prototype_debug_lines = { version = "0.10", features = ["3d"] }
bevy_egui = "0.20"
egui = "0.21"

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
debug = false