[package]
name = "gem_td"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
seldom_map_nav = "0.5"
seldom_interop = "0.4"
bevy-inspector-egui = "0.19"
fastrand = "1.9"
bevy_rapier3d = "0.22"

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
debug = false